Fix bug where collapsable menu would aquire a block display property when it should be none

--- a/components/Layout/styles/Navbar/Navbar.module.scss
+++ b/components/Layout/styles/Navbar/Navbar.module.scss
@@ -83,7 +83,7 @@
 
 
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 950px) {
 
     .nav-container {
         justify-content: space-between;
