--- a/components/Layout/styles/Navbar/NavbarAccountLinks.module.scss
+++ b/components/Layout/styles/Navbar/NavbarAccountLinks.module.scss
@@ -35,7 +35,7 @@
   }
 
 
-  @media screen and (max-width: 850px) {
+  @media screen and (max-width: 950px) {
     @keyframes fade-in {
       from {
         opacity: 0;
